# SadTalker-Video-Lip-Sync

./: README.md  pyproject.toml  setup.py
sadtalker_video_lip_sync/: inference.py
sadtalker_video_lip_sync/src/: generate_batch.py  test_audio2coeff.py
sadtalker_video_lip_sync/src/audio2pose_models/: audio2pose.py  cvae.py  res_unet.py
sadtalker_video_lip_sync/src/dain_model/: dain_predictor.py
sadtalker_video_lip_sync/src/face3d/models/: __init__.py  bfm.py  facerecon_model.py
sadtalker_video_lip_sync/src/face3d/util/: __init__.py
sadtalker_video_lip_sync/src/facerender/: animate.py
sadtalker_video_lip_sync/src/facerender/modules/: dense_motion.py  generator.py  keypoint_detector.py  util.py
sadtalker_video_lip_sync/src/utils/: audio.py  face_enhancer.py  paste_pic.py  preprocess.py
sadtalker_video_lip_sync/third_part/GPEN/: gpen_face_enhancer copy.py  gpen_face_enhancer.py
sadtalker_video_lip_sync/third_part/GPEN/face_detect/facemodels/: retinaface.py
sadtalker_video_lip_sync/third_part/GPEN/face_detect/layers/modules/: multibox_loss.py
sadtalker_video_lip_sync/third_part/GPEN/face_model/: face_gan.py  gpen_model.py
sadtalker_video_lip_sync/third_part/GPEN/face_parse/: face_parsing.py  parse_model.py
