[tool.poetry]
name = "sadtalker-video-lip-sync"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sadtalker_video_lip_sync"}]

[tool.poetry.dependencies]
python = "^3.10"
face-alignment = "1.3.5"
imageio-ffmpeg = "0.4.7"
librosa = "0.9.2"
numba = "^0.60.0"
resampy = "0.3.1"
pydub = "0.25.1"
kornia = "0.6.8"
tqdm = "^4.66.4"
yacs = "0.1.8"
pyyaml = "^6.0.1"
facexlib = "0.2.5"
gradio = "^4.38.1"
gfpgan = "^1.3.8"
dlib-bin = "^19.24.2.post1"
numpy = "1.23.4"
torch = "2.2.0"
torchvision = "0.17.0"
imageio = "2.19.3"
basicsr = {git = "https://github.com/XPixelGroup/BasicSR.git", rev = "master"}

[tool.poetry.scripts]
sadtalker = "sadtalker_video_lip_sync.inference:main"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
